--- a/FynxV2/package.json
+++ b/FynxV2/package.json
@@ -7,7 +7,6 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -39,7 +38,13 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@refinedev/core": "^4.58.0",
+    "@refinedev/devtools": "^1.2.17",
+    "@refinedev/kbar": "^1.3.17",
+    "@refinedev/react-hook-form": "^4.10.2",
+    "@refinedev/react-router-v6": "^4.6.2",
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -53,7 +58,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-github-contribution-calendar": "^2.2.0",
-    "react-hook-form": "^7.61.1",
+    "react-hook-form": "^7.65.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
@@ -65,6 +70,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@refinedev/cli": "^2.16.49",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
@@ -80,6 +86,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^7.1.10"
   }
 }
