--- a/FynxV2/package.json
+++ b/FynxV2/package.json
@@ -71,7 +71,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
-    "@refinedev/cli": "^2.16.49",
+    "@refinedev/cli": "2.16.47",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
