--- a/FynxV2/package.json
+++ b/FynxV2/package.json
@@ -7,13 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "preview": "vite preview",
-    "test:e2e": "mocha tests/**/*.test.js --timeout 120000",
-    "test:e2e:headful": "DEBUG_E2E=1 mocha tests/**/*.test.js --timeout 120000",
-    "e2e": "start-server-and-test dev http://localhost:5173 test:e2e",
-    "e2e:headful": "DEBUG_E2E=1 start-server-and-test dev http://localhost:5173 test:e2e:headful",
-    "e2e:realapi": "E2E_DISABLE_MOCK=1 start-server-and-test dev http://localhost:5173 test:e2e",
-    "e2e:headful:realapi": "DEBUG_E2E=1 E2E_DISABLE_MOCK=1 start-server-and-test dev http://localhost:5173 test:e2e:headful"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -84,17 +78,13 @@
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
-    "chai": "^5.1.2",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "lovable-tagger": "^1.1.9",
-    "mocha": "^11.1.0",
     "postcss": "^8.5.6",
-  "selenium-webdriver": "^4.27.0",
-  "start-server-and-test": "^2.0.8",
-  "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.1.10"
