chore(config): atualizar regras de .gitignore e .gitattributes
- Atualiza lista de exclusão de arquivos no .gitignore para evitar tracking indevido
- Ajusta definições de atributos e normalização no .gitattributes
- Garante a padronização do ambiente de desenvolvimento

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,25 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# Enforce LF for source files to avoid CRLF issues on Windows
+*.js   text eol=lf
+*.ts   text eol=lf
+*.tsx  text eol=lf
+*.jsx  text eol=lf
+*.json text eol=lf
+*.css  text eol=lf
+*.scss text eol=lf
+*.html text eol=lf
+*.md   text eol=lf
+
+# Treat binary assets as binary (no EOL conversion)
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.ico binary
+*.svg binary
+
+# Mark DB file as binary and exclude from generated archives
+*.db binary
+FynxApi/data/fynx.db export-ignore
