--- a/FynxV2/package.json
+++ b/FynxV2/package.json
@@ -45,6 +45,8 @@
     "@refinedev/react-router-v6": "^4.6.2",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.12.2",
+    "chai": "^6.2.1",
+    "chromedriver": "^142.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -64,6 +66,7 @@
     "react-router-dom": "^6.30.1",
     "react-window": "^2.2.1",
     "recharts": "^2.15.4",
+    "selenium-webdriver": "^4.38.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
